--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
         "@chakra-ui/react": "^2.7.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@ethersproject/bignumber": "^5.7.0",
         "@openzeppelin/contracts": "^4.9.1",
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
+        "constants": "^0.0.2",
         "framer-motion": "^10.12.16",
+        "fs": "^0.0.1-security",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "^2.1.3",
-        "web-vitals": "^2.1.4"
+        "react-scripts": "4.0.3",
+        "stream": "^0.0.2",
+        "web-vitals": "^3.3.2",
+        "webpack": "^5.86.0"
     },
+    "resolutions": {
+    "react-error-overlay": "6.0.9"
+},
     "scripts": {
+	     "preinstall": "npx npm-force-resolutions",
         "start": "DISABLE_ESLINT_PLUGIN=true react-scripts --openssl-legacy-provider start",
         "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
@@ -32,37 +43,32 @@
             "react/react-in-jsx-scope": "off"
         }
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+    ],
     "devDependencies": {
-        "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+        "@nomicfoundation/hardhat-toolbox": "^3.0.0",
         "@nomiclabs/hardhat-etherscan": "^3.1.7",
         "assert": "^2.0.0",
         "buffer": "^6.0.3",
         "crypto-browserify": "^3.12.0",
         "dotenv": "^16.1.4",
         "hardhat": "^2.15.0",
+        "html-webpack-plugin": "^5.5.3",
         "https-browserify": "^1.0.0",
         "os-browserify": "^0.3.0",
         "process": "^0.11.10",
         "react-app-rewired": "^2.2.1",
+        "react-error-overlay": "^6.0.9",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "url": "^0.11.1"
     },
     "browser": {
-        "fs": false,
         "path": false,
-        "os": false
+        "os": false,
+        "fs": false
     }
 }
